2001-06-05  Kjetil Jacobsen  <kjetilja>

	* WRITEFUNCTION callbacks now work (see tests/test_cb.py for details).

	* Preliminary distutils installation.

	* Added CLOSEPOLICY constants to module namespace.
	
2001-06-04  Kjetil Jacobsen  <kjetilja>

	* Return -1 on error from Python callback in WRITEFUNCTION callback.

2001-06-01  Kjetil Jacobsen  <kjetilja>

	* Moved source to src and tests to tests directory.

2001-05-31  Kjetil Jacobsen  <kjetilja>

	* Added better type checking for setopt.

2001-05-30  Kjetil Jacobsen  <kjetilja>

	* Moved code to sourceforge.

	* Added getinfo support.
