@@ -1,1 +1,1 @@
-* Header, password, progress and read function callbacks are not supported
+* Password  and read function callbacks are not supported
